@@ -117,12 +117,12 @@ switch ("$arch")
 case 1:			# SPARC Station
 	set arch=sun
 	set mach="-I/usr/openwin/include -L/usr/openwin/lib -DNOSTEREO"
-	set opt="-O -DSPEED=80"
+	set opt="-O"
 	set compat="strcmp.o"
 	breaksw
 case 2:			# HP workstation
 	set mach=""
-	set opt="-O -DSPEED=80 -Aa -D_HPUX_SOURCE"
+	set opt="-O -Aa -D_HPUX_SOURCE"
 	set compat="strcmp.o"
 	set arch=hpux
 	breaksw
@@ -131,13 +131,13 @@ case 3:			# Silicon Graphics
 	switch (`uname -r`)
 	case 3.*:
 		set mach="-noprototypes"
-		set opt="-O -DSPEED=80"
+		set opt="-O"
 		set special="sgi"
 		set compat="strcmp.o"
 		breaksw
 	case 4.*:
 		set mach=""
-		set opt="-O2 -DSPEED=100"
+		set opt="-O2"
 		set compat="strcmp.o"
 		set extras='"MLIB=-lfastm -lm"'
 		breaksw
@@ -145,7 +145,7 @@ case 3:			# Silicon Graphics
 		ln -s `which wish` $idir/wish4.0
 		set path=($idir $path)
 		set mach="-w"
-		set opt="-O2 -DSPEED=200"
+		set opt="-O2"
 		set special="ogl"
 		set compat="strcmp.o"
 		breaksw
@@ -158,34 +158,34 @@ case 4:			# AIX
 	breaksw
 case 5:			# BSDI BSD/386
 	set mach="-DBSD -L/usr/X11/lib -I/usr/X11/include"
-	set opt="-O -DSPEED=100"
+	set opt="-O"
 	set arch=IBMPC
 	set compat="erf.o strcmp.o"
 	breaksw
 case 6:			# Linux
 	set mach="-Dlinux -D_FILE_OFFSET_BITS=64 -L/usr/X11R6/lib -I/usr/include/X11 -DNOSTEREO"
-	set opt="-O2 -DSPEED=200"
+	set opt="-O2"
 	set arch=IBMPC
 	set compat="erf.o"
 	set extras=CC=gcc
 	breaksw
 case 7:			# MacOS X
 	set mach="-DBSD -DNOSTEREO -Dfreebsd -I/usr/X11R6/include -L/usr/X11R6/lib"
-	set opt="-O2 -DSPEED=200"
+	set opt="-O2"
 	set arch=PowerPC
 	set extras="CC=cc CONFIGURE_ARCH=powerpc"
 	set special="ogl"
 	breaksw
 case 8:			# FreeBSD
 	set mach="-DBSD -DNOSTEREO -Dfreebsd -I/usr/X11R6/include -L/usr/X11R6/lib"
-	set opt="-O -DSPEED=200"
+	set opt="-O"
 	set compat="erf.o"
 	set extras='CC=cc MLIB="-lcompat -lm"'
 	set arch=IBMPC
 	breaksw
 case 9:			# Cygwin
 	set mach="-Dfreebsd -L/usr/lib -L/usr/X11R6/lib -I/usr/include/X11 -I/usr/X11R6/include -DNOSTEREO"
-	set opt="-O2 -DSPEED=200"
+	set opt="-O2"
 	set arch=IBMPC
 	set compat="erf.o"
 	set extras="CC=gcc"
