@@ -1519,3 +1519,5 @@ during parallel rendering -- this was a serious oversight.
 Created ran2tiff program to automate exposure setting of animation
 sequences using a moving histogram in combination with pcond, and
 converting frames to TIFF.
+
+Eliminated SPEED macro from makeall and source tree.
